--- a/OgrenciTakipSistemi.WebMVC/OgrenciTakipSistemi.WebMVC.csproj
+++ b/OgrenciTakipSistemi.WebMVC/OgrenciTakipSistemi.WebMVC.csproj
@@ -6,4 +6,15 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.11" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OgrenciTakipSistemi.DAL\OgrenciTakipSistemi.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
