--- a/OgrenciTakipSistemi.WebMVC/OgrenciTakipSistemi.WebMVC.csproj
+++ b/OgrenciTakipSistemi.WebMVC/OgrenciTakipSistemi.WebMVC.csproj
@@ -17,4 +17,12 @@
     <ProjectReference Include="..\OgrenciTakipSistemi.DAL\OgrenciTakipSistemi.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\AdminArea\Controllers\" />
+    <Folder Include="Areas\AdminArea\Data\" />
+    <Folder Include="Areas\AdminArea\Models\" />
+    <Folder Include="Areas\AdminArea\Views\" />
+    <Folder Include="Models\DTOs\" />
+  </ItemGroup>
+
 </Project>
