Entities Eklemeler yapıldı Ve güncellendi

--- a/OgrenciTakipSistemi.WebMVC/OgrenciTakipSistemi.WebMVC.csproj
+++ b/OgrenciTakipSistemi.WebMVC/OgrenciTakipSistemi.WebMVC.csproj
@@ -10,6 +10,10 @@
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.10" />
   </ItemGroup>
 
@@ -22,7 +26,7 @@
     <Folder Include="Areas\AdminArea\Data\" />
     <Folder Include="Areas\AdminArea\Models\" />
     <Folder Include="Areas\AdminArea\Views\" />
-    <Folder Include="Models\DTOs\" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
 
 </Project>
