--- a/OgrenciTakipSistemi.WebMVC/OgrenciTakipSistemi.WebMVC.csproj
+++ b/OgrenciTakipSistemi.WebMVC/OgrenciTakipSistemi.WebMVC.csproj
@@ -18,7 +18,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OgrenciTakipSistemi.Business\OgrenciTakipSistemi.Business.csproj" />
     <ProjectReference Include="..\OgrenciTakipSistemi.DAL\OgrenciTakipSistemi.DAL.csproj" />
+    <ProjectReference Include="..\OgrenciTakipSistemi.Entities\OgrenciTakipSistemi.Entities.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -26,7 +28,6 @@
     <Folder Include="Areas\AdminArea\Data\" />
     <Folder Include="Areas\AdminArea\Models\" />
     <Folder Include="Areas\AdminArea\Views\" />
-    <Folder Include="Extensions\" />
   </ItemGroup>
 
 </Project>
