--- a/OgrenciTakipSistemi.WebMVC/OgrenciTakipSistemi.WebMVC.csproj
+++ b/OgrenciTakipSistemi.WebMVC/OgrenciTakipSistemi.WebMVC.csproj
@@ -31,6 +31,12 @@
 
   <ItemGroup>
     <Folder Include="Areas\AdminArea\Data\" />
+    <Folder Include="Areas\DanismanArea\Data\" />
+    <Folder Include="Areas\DanismanArea\Models\" />
+    <Folder Include="Areas\DanismanArea\Views\" />
+    <Folder Include="Areas\OgrenciArea\Data\" />
+    <Folder Include="Areas\OgrenciArea\Models\" />
+    <Folder Include="Areas\OgrenciArea\Views\" />
   </ItemGroup>
 
 </Project>
